OSLab/Experiment-1/errors.txt
FCFS.c: In function ‘main’:
FCFS.c:12:1: warning: implicit declaration of function ‘clrscr’ [-Wimplicit-function-declaration]
   12 | clrscr();
      | ^~~~~~
FCFS.c:32:1: error: too few arguments to function ‘getc’
   32 | getc();
      | ^~~~
In file included from FCFS.c:7:
/usr/include/stdio.h:514:12: note: declared here
  514 | extern int getc (FILE *__stream);
      |            ^~~~
